--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,10 +2,18 @@
 CHANGES
 =======
 
-3.5.2 (unreleased)
-------------------
+4.0.0a1 (unreleased)
+--------------------
 
-- ...
+- Renamed package from ``zope.app.renderer`` to ``zope.renderer``.
+
+- Added support for Python 3.3.
+
+- Replaced deprecated ``zope.interface.implements`` usage with equivalent
+  ``zope.interface.implementer`` decorator.
+
+- Dropped support for Python 2.4 and 2.5.
+
 
 3.5.1 (2009-07-21)
 ------------------
