--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,10 +2,12 @@
 CHANGES
 =======
 
-4.0.0a2 (unreleased)
---------------------
+4.0.0 (unreleased)
+------------------
 
-- Nothing changed yet.
+- Add support for Python 3.5, 3.6, 3.7, 3.8 and 3.9.
+
+- Drop support for Python 2.6 and 3.3.
 
 
 4.0.0a1 (2013-03-01)
