--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,6 +5,10 @@ CHANGES
 4.0.0 (unreleased)
 ------------------
 
+- Add support for Python 3.10, 3.11.
+
+- Drop support for Python 2.7, 3.5, 3.6.
+
 - Add support for Python 3.5, 3.6, 3.7, 3.8 and 3.9.
 
 - Drop support for Python 2.6 and 3.3.
